chore(ci): Configure Codecov reporting

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ install:
 script:
   - npm run test -- --code-coverage --no-progress --browsers=ChromeHeadlessCI
   - npm run build -- --prod
+
+after_success:
+  - npm run codecov
