fix(ci): Remove unecessary files before deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ script:
 
 after_success:
   - npm run codecov
+  - rm -rf node_modules/
+  - rm -rf coverage/
 
 deploy:
   provider: azure_web_apps
